add all content for latest-funding

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 						</p>
 					</article>
 					<article class="funding-article">
-						<h1 class="funding-header">Bokio</h1>
+						<h1 class="funding-header">Bestow</h1>
 						<div class="funding-details">
 							<img src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F1201362426328944640%2FkTYCwRXD.jpg&amp;signature=7bb51a91c59e3179168b0466a2afe011" alt="">
 							<div>
@@ -179,43 +179,43 @@
 						</div>
 						<hr>
 						<p class="raise">
-							Bokio Raises €7.4M in Funding; Merges With Red Flag <span>on FinSMEs</span>
+							Bestow Closes $50M Series B Financing <span>on FinSMEs</span>
 						</p>
 					</article>
 					<article class="funding-article">
-						<h1 class="funding-header">Bokio</h1>
+						<h1 class="funding-header">Capdesk</h1>
 						<div class="funding-details">
-							<img src="./img/bokio-image.jpeg" alt="">
+							<img src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F991985707160932352%2F5VfobnHz.jpg&amp;signature=83ade9266565740399f4fbe0ec351f0d" alt="">
 							<div>
-								<p class="funding-amount">$3.3M</p>
-								<span class="funding-type">SEED FUND</span>
+								<p class="funding-amount">$3M</p>
+								<span class="funding-type">SERIES A</span>
 							</div>
 						</div>
 						<div class="funding-company">
-							<p><i class="fas fa-tag"></i>Accounting, +3</p>
-							<p><i class="fas fa-briefcase"></i>Creandum, +7</p>
+							<p><i class="fas fa-tag"></i>Employer Benefits</p>
+							<p><i class="fas fa-briefcase"></i>Fuel Ventures</p>
 						</div>
 						<hr>
 						<p class="raise">
-							Bokio Raises €7.4M in Funding; Merges With Red Flag <span>on FinSMEs</span>
+							Capdesk Raises £3M in Series A Funding  <span>on FinSMEs</span>
 						</p>
 					</article>
 					<article class="funding-article hide768 show1024">
-						<h1 class="funding-header">Bokio</h1>
+						<h1 class="funding-header">Expedia Group</h1>
 						<div class="funding-details">
-							<img src="./img/bokio-image.jpeg" alt="">
+							<img src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F978245677690929153%2FGHYP5FTp.jpg&signature=4347ce778063b686c158939407455d58" alt="">
 							<div>
-								<p class="funding-amount">$3.3M</p>
-								<span class="funding-type">SEED FUND</span>
+								<p class="funding-amount">$1.2B</p>
+								<span class="funding-type">POST-IPO EQUITY</span>
 							</div>
 						</div>
 						<div class="funding-company">
-							<p><i class="fas fa-tag"></i>Accounting, +3</p>
-							<p><i class="fas fa-briefcase"></i>Creandum, +7</p>
+							<p><i class="fas fa-tag"></i>Travel, +2</p>
+							<p><i class="fas fa-briefcase"></i>Silver Lake Partners</p>
 						</div>
 						<hr>
 						<p class="raise">
-							Bokio Raises €7.4M in Funding; Merges With Red Flag <span>on FinSMEs</span>
+							Expedia Group (EXPE) Raises $3.2 Billion And Names Peter Kern As CEO  <span>on Pulse 2.0</span>
 						</p>
 					</article>
 				</div>
