add a tag to some part of the footer

--- a/index.html
+++ b/index.html
@@ -663,9 +663,9 @@
 		</nav>
 
 		<footer class="page-footer">
-			<p><img src="./img/tnw.svg" alt="TNW logo"><span> © 2006–2020 The Next Web B.V.</span></p>
+			<p><a href=""><img src="./img/tnw.svg" alt="TNW logo"></a> <span> © 2006–2020 The Next Web B.V.</span></p>
 			<p>Made with <span class="love">♥</span>  in Amsterdam.</p>
-			<p> Powered by <img src="./img/stackpath.svg" alt="Stackpath logo"></p>
+			<p> Powered by <a href=""><img src="./img/stackpath.svg" alt="Stackpath logo"></a> </p>
 		</footer>
 	</body>
 
