--- a/index.html
+++ b/index.html
@@ -535,11 +535,13 @@
 				</div>
 				<div class="deals-wrapper">
 					<article class="deals-article one">
-						<div class="deals-bg">
-							<div class="deals-bg2">
-								<p class="deals-tag hide-below768 show-above767">96% OFF</p>
+						<a href="#">
+							<div class="deals-bg">
+								<div class="deals-bg2">
+									<p class="deals-tag hide-below768 show-above767">96% OFF</p>
+								</div>
 							</div>
-						</div>
+						</a>
 						<div class="deals-info">
 							<h2><a class="deals-title" href="">The Beginner Cloud Architect Professional Training Bundle Ft. Azure & AWS</a></h2>
 							<p class="deals-price">
@@ -548,11 +550,13 @@
 						</div>
 					</article>
 					<article class="deals-article two">
-						<div class="deals-bg">
-							<div class="deals-bg2">
-								<p class="deals-tag hide-below768 show-above767">98% OFF</p>
+						<a href="#">
+							<div class="deals-bg">
+								<div class="deals-bg2">
+									<p class="deals-tag hide-below768 show-above767">98% OFF</p>
+								</div>
 							</div>
-						</div>
+						</a>
 						<div class="deals-info">
 							<h2><a class="deals-title" href="">The Increase Your Google App Productivity with Google Script Bundle</a></h2>
 							<p class="deals-price">
@@ -561,11 +565,13 @@
 						</div>
 					</article>
 					<article class="deals-article three">
-						<div class="deals-bg">
-							<div class="deals-bg2">
-								<p class="deals-tag hide-below768 show-above767">97% OFF</p>
+						<a href="#">
+							<div class="deals-bg">
+								<div class="deals-bg2">
+									<p class="deals-tag hide-below768 show-above767">97% OFF</p>
+								</div>
 							</div>
-						</div>
+						</a>
 						<div class="deals-info">
 							<h2><a class="deals-title" href="">The All-Level AWS Cloud Professional Bootcamp</a></h2>
 							<p class="deals-price">
@@ -574,11 +580,13 @@
 						</div>
 					</article>
 					<article class="deals-article four">
-						<div class="deals-bg">
-							<div class="deals-bg2">
-								<p class="deals-tag hide-below768 show-above767">90% OFF</p>
+						<a href="#">
+							<div class="deals-bg">
+								<div class="deals-bg2">
+									<p class="deals-tag hide-below768 show-above767">90% OFF</p>
+								</div>
 							</div>
-						</div>
+						</a>
 						<div class="deals-info">
 							<h2><a class="deals-title" href="">The QuickBooks 2020 Essentials Bundle: Beginner to Bookkeeper</a></h2>
 							<p class="deals-price">
@@ -587,9 +595,11 @@
 						</div>
 					</article>
 					<article class="deals-article five">
-						<div class="deals-bg">
+						<a href="#">
+							<div class="deals-bg">
 							
-						</div>
+							</div>
+						</a>
 						<div class="deals-info">
 							<h2><a class="deals-title" href="">FREE: Zoom Backgrounds Bundle</a></h2>
 							<p class="deals-price">
@@ -598,9 +608,11 @@
 						</div>
 					</article>
 					<article class="deals-article six">
-						<div class="deals-bg">
+						<a href="#">
+							<div class="deals-bg">
 							
-						</div>
+							</div>
+						</a>
 						<div class="deals-info">
 							<h2><a class="deals-title" href="">Learn How to Draw Freebie Bundle</a></h2>
 							<p class="deals-price">
@@ -609,11 +621,13 @@
 						</div>
 					</article>
 					<article class="deals-article seven">
-						<div class="deals-bg">
-							<div class="deals-bg2">
-								<p class="deals-tag hide-below768 show-above767">76% OFF</p>
+						<a href="#">
+							<div class="deals-bg">
+								<div class="deals-bg2">
+									<p class="deals-tag hide-below768 show-above767">76% OFF</p>
+								</div>
 							</div>
-						</div>
+						</a>
 						<div class="deals-info">
 							<h2><a class="deals-title" href="">The Social Distancing Lifetime Subscription Bundle Ft. Rosetta Stone</a></h2>
 							<p class="deals-price">
@@ -622,11 +636,13 @@
 						</div>
 					</article>
 					<article class="deals-article eight">
-						<div class="deals-bg">
-							<div class="deals-bg2">
-								<p class="deals-tag hide-below768 show-above767">97% OFF</p>
+						<a href="#">
+							<div class="deals-bg">
+								<div class="deals-bg2">
+									<p class="deals-tag hide-below768 show-above767">97% OFF</p>
+								</div>
 							</div>
-						</div>
+						</a>
 						<div class="deals-info">
 							<h2><a class="deals-title" href="">The Project Manager's Essential Certification Bundle Ft. Scrum, Agile & PMP</a></h2>
 							<p class="deals-price">
