Add background image link to news categories

--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
 					<hr>
 
 				</section>
-				<section class="apps">
-					<p class="category-name"><a href=""> Gears <i class="fas fa-chevron-right"></i></a></p>
-					<article class="category-hero apps-hero">
+				<section class="gear">
+					<p class="category-name"><a href=""> Gear <i class="fas fa-chevron-right"></i></a></p>
+					<article class="category-hero gear-hero">
 						<span class="article-category">MOST POPULAR</span>
 						<h1><a href="">Some OnePlus 8 Pro users are complaining about problems with their displays</h1></a>
 						<span class="article-meta">
@@ -299,9 +299,9 @@
 					<hr>
 
 				</section>
-				<section class="apps">
-					<p class="category-name"><a href=""> Apps <i class="fas fa-chevron-right"></i></a></p>
-					<article class="category-hero apps-hero">
+				<section class="tech">
+					<p class="category-name"><a href=""> Tech <i class="fas fa-chevron-right"></i></a></p>
+					<article class="category-hero tech-hero">
 						<span class="article-category">MOST POPULAR</span>
 						<h1><a href="">Zoom’s 5.0 update helps stop zoombombing and improves encryption</h1></a>
 						<span class="article-meta">
@@ -337,9 +337,9 @@
 					</article>
 					<hr>
 				</section>
-				<section class="apps">
-					<p class="category-name"><a href=""> Apps <i class="fas fa-chevron-right"></i></a></p>
-					<article class="category-hero apps-hero">
+				<section class="creative">
+					<p class="category-name"><a href=""> Creative <i class="fas fa-chevron-right"></i></a></p>
+					<article class="category-hero creative-hero">
 						<span class="article-category">MOST POPULAR</span>
 						<h1><a href="">Zoom’s 5.0 update helps stop zoombombing and improves encryption</h1></a>
 						<span class="article-meta">
@@ -375,9 +375,9 @@
 					</article>
 					<hr>
 				</section>
-				<section class="apps">
-					<p class="category-name"><a href=""> Apps <i class="fas fa-chevron-right"></i></a></p>
-					<article class="category-hero apps-hero">
+				<section class="podium">
+					<p class="category-name"><a href=""> Podium <i class="fas fa-chevron-right"></i></a></p>
+					<article class="category-hero podium-hero">
 						<span class="article-category">MOST POPULAR</span>
 						<h1><a href="">Zoom’s 5.0 update helps stop zoombombing and improves encryption</h1></a>
 						<span class="article-meta">
@@ -413,9 +413,9 @@
 					</article>
 					<hr>
 				</section>
-				<section class="apps">
-					<p class="category-name"><a href=""> Apps <i class="fas fa-chevron-right"></i></a></p>
-					<article class="category-hero apps-hero">
+				<section class="insights">
+					<p class="category-name"><a href=""> Insights <i class="fas fa-chevron-right"></i></a></p>
+					<article class="category-hero insights-hero">
 						<span class="article-category">MOST POPULAR</span>
 						<h1><a href="">Zoom’s 5.0 update helps stop zoombombing and improves encryption</h1></a>
 						<span class="article-meta">
@@ -451,9 +451,9 @@
 					</article>
 					<hr>
 				</section>
-				<section class="apps">
-					<p class="category-name"><a href=""> Apps <i class="fas fa-chevron-right"></i></a></p>
-					<article class="category-hero apps-hero">
+				<section class="launch">
+					<p class="category-name"><a href=""> Launch <i class="fas fa-chevron-right"></i></a></p>
+					<article class="category-hero launch-hero">
 						<span class="article-category">MOST POPULAR</span>
 						<h1><a href="">Zoom’s 5.0 update helps stop zoombombing and improves encryption</h1></a>
 						<span class="article-meta">
@@ -489,9 +489,9 @@
 					</article>
 					<hr>
 				</section>
-				<section class="apps">
-					<p class="category-name"><a href=""> Apps <i class="fas fa-chevron-right"></i></a></p>
-					<article class="category-hero apps-hero">
+				<section class="distract">
+					<p class="category-name"><a href=""> Distract <i class="fas fa-chevron-right"></i></a></p>
+					<article class="category-hero distract-hero">
 						<span class="article-category">MOST POPULAR</span>
 						<h1><a href="">Zoom’s 5.0 update helps stop zoombombing and improves encryption</h1></a>
 						<span class="article-meta">
