Add bg images to news categories hero section

--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@
 					<p class="category-name"><a href=""> Tech <i class="fas fa-chevron-right"></i></a></p>
 					<article class="category-hero tech-hero">
 						<span class="article-category">MOST POPULAR</span>
-						<h1><a href="">Zoom’s 5.0 update helps stop zoombombing and improves encryption</h1></a>
+						<h1><a href="">Researchers claim this AI model achieves better compression rates than PNGs</h1></a>
 						<span class="article-meta">
-							<span>Napier Lopez</span>&nbsp;&nbsp;
+							<span>Ivan Mehta</span>&nbsp;&nbsp;
 							<span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
 						</span>
 					</article>
@@ -341,7 +341,7 @@
 					<p class="category-name"><a href=""> Creative <i class="fas fa-chevron-right"></i></a></p>
 					<article class="category-hero creative-hero">
 						<span class="article-category">MOST POPULAR</span>
-						<h1><a href="">Zoom’s 5.0 update helps stop zoombombing and improves encryption</h1></a>
+						<h1><a href="">This AI wrote such emo lyrics that humans thought it was My Chemical Romance</h1></a>
 						<span class="article-meta">
 							<span>Napier Lopez</span>&nbsp;&nbsp;
 							<span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
@@ -379,7 +379,7 @@
 					<p class="category-name"><a href=""> Podium <i class="fas fa-chevron-right"></i></a></p>
 					<article class="category-hero podium-hero">
 						<span class="article-category">MOST POPULAR</span>
-						<h1><a href="">Zoom’s 5.0 update helps stop zoombombing and improves encryption</h1></a>
+						<h1><a href="">Run an online store? In the age of COVID-19, you can’t skimp on web accessibility</h1></a>
 						<span class="article-meta">
 							<span>Napier Lopez</span>&nbsp;&nbsp;
 							<span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
@@ -417,7 +417,7 @@
 					<p class="category-name"><a href=""> Insights <i class="fas fa-chevron-right"></i></a></p>
 					<article class="category-hero insights-hero">
 						<span class="article-category">MOST POPULAR</span>
-						<h1><a href="">Zoom’s 5.0 update helps stop zoombombing and improves encryption</h1></a>
+						<h1><a href="">It's lonely being a female engineer — here’s how we fix it</h1></a>
 						<span class="article-meta">
 							<span>Napier Lopez</span>&nbsp;&nbsp;
 							<span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
@@ -455,7 +455,7 @@
 					<p class="category-name"><a href=""> Launch <i class="fas fa-chevron-right"></i></a></p>
 					<article class="category-hero launch-hero">
 						<span class="article-category">MOST POPULAR</span>
-						<h1><a href="">Zoom’s 5.0 update helps stop zoombombing and improves encryption</h1></a>
+						<h1><a href="">Facebook-backed Reliance Jio pilots basic grocery ordering service on WhatsApp in India</h1></a>
 						<span class="article-meta">
 							<span>Napier Lopez</span>&nbsp;&nbsp;
 							<span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
@@ -493,7 +493,7 @@
 					<p class="category-name"><a href=""> Distract <i class="fas fa-chevron-right"></i></a></p>
 					<article class="category-hero distract-hero">
 						<span class="article-category">MOST POPULAR</span>
-						<h1><a href="">Zoom’s 5.0 update helps stop zoombombing and improves encryption</h1></a>
+						<h1><a href="">The true, cocaine-fueled story behind Back to the Future's time-traveling DeLorean</h1></a>
 						<span class="article-meta">
 							<span>Napier Lopez</span>&nbsp;&nbsp;
 							<span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
