--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<main>
 			<section class="hero-section">
 				<article  class="main-article article1">
-					<h1><a href="">Facebook invests $5.7B in Indian mobile carrier Reliance Jio to bring small businesses online</a></h1>
+					<h2><a href="">Facebook invests $5.7B in Indian mobile carrier Reliance Jio to bring small businesses online</a></h2>
 					<span class="article-meta">
 						<span>by Ivan Mehta</span>&nbsp;&nbsp;
 						<span><i class="far fa-clock"></i>&nbsp;1 hour ago</span>&nbsp;&nbsp;
@@ -33,7 +33,7 @@
 				</article>
 				<article class="main-article article2">
 					<span class="article-category">APPS</span>
-					<h1><a href="">WhatsApp teams up with the WHO to release 21 new stickers about quarantine life</h1></a>
+					<h2><a href="">WhatsApp teams up with the WHO to release 21 new stickers about quarantine life</a></h2>
 					<span class="article-meta">
 						<span>by Ivan Mehta</span>&nbsp;&nbsp;
 						<span><i class="far fa-clock"></i>&nbsp;1 hour ago</span>&nbsp;&nbsp;
@@ -42,7 +42,7 @@
 				</article>
 				<article class="main-article article3">
 					<span class="article-category">GEAR</span>
-					<h1><a href="">Google finally lets you adjust ‘Okay Google’ sensitivity</h1></a>
+					<h2><a href="">Google finally lets you adjust ‘Okay Google’ sensitivity</a></h2>
 					<span class="article-meta">
 						<span>by Ivan Mehta</span>&nbsp;&nbsp;
 						<span><i class="far fa-clock"></i>&nbsp;1 hour ago</span>&nbsp;&nbsp;
