Fix html validator errors

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 		<main>
 			<section class="hero-section">
+				<h2 style="display:none">Empty Heading</h2>
 				<article  class="main-article article1">
 					<h2><a href="">Facebook invests $5.7B in Indian mobile carrier Reliance Jio to bring small businesses online</a></h2>
 					<span class="article-meta">
@@ -51,7 +52,7 @@
 				</article>
 			</section>
 			<section class="latest">
-				<p class="category-name"><a href="#">Latest news <i class="fas fa-chevron-right"></i></a></p>
+				<h2 class="category-name"><a href="#">Latest news <i class="fas fa-chevron-right"></i></a></h2>
 				<div class="latest-wrapper">
 					<article class="latest-article">
 						<figure>
@@ -136,9 +137,9 @@
 				</div>
 			</section>
 			<section class="latest-funding">
+				<h2 style="display:none">Empty Heading</h2>
 				<div class="flex">
-					<p class="category-name"><a href="#">Latest funding rounds on Index.co &nbsp;<i class="fas fa-chevron-right"></i></a></p>
-				
+					<p class="category-name"><a href="#">Latest funding rounds on Index.co &nbsp;<i class="fas fa-chevron-right"></i></a></p>				
 					<ul>
 						<li><a href="" class="first">See more</a></li>
 						<li><a href="">Get updates by email</a></li>
@@ -147,7 +148,7 @@
 				</div>
 				<div class="latest-funding-wrapper">
 					<article class="funding-article">
-						<h1 class="funding-header">Bokio</h1>
+						<h2 class="funding-header">Bokio</h2>
 						<div class="funding-details">
 							<img src="./img/bokio-image.jpeg" alt="">
 							<div>
@@ -165,7 +166,7 @@
 						</p>
 					</article>
 					<article class="funding-article">
-						<h1 class="funding-header">Bestow</h1>
+						<h2 class="funding-header">Bestow</h2>
 						<div class="funding-details">
 							<img src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F1201362426328944640%2FkTYCwRXD.jpg&amp;signature=7bb51a91c59e3179168b0466a2afe011" alt="">
 							<div>
@@ -183,7 +184,7 @@
 						</p>
 					</article>
 					<article class="funding-article">
-						<h1 class="funding-header">Capdesk</h1>
+						<h2 class="funding-header">Capdesk</h2>
 						<div class="funding-details">
 							<img src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F991985707160932352%2F5VfobnHz.jpg&amp;signature=83ade9266565740399f4fbe0ec351f0d" alt="">
 							<div>
@@ -201,7 +202,7 @@
 						</p>
 					</article>
 					<article class="funding-article hide768 show1024">
-						<h1 class="funding-header">Expedia Group</h1>
+						<h2 class="funding-header">Expedia Group</h2>
 						<div class="funding-details">
 							<img src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F978245677690929153%2FGHYP5FTp.jpg&signature=4347ce778063b686c158939407455d58" alt="">
 							<div>
@@ -222,10 +223,10 @@
 			</section>
 			<aside class="news-categories">
 				<section class="apps">
-					<p class="category-name"><a href=""> Apps <i class="fas fa-chevron-right"></i></a></p>
+					<h2 class="category-name"><a href=""> Apps <i class="fas fa-chevron-right"></i></a></h2>
 					<article class="category-hero apps-hero">
 						<span class="article-category">MOST POPULAR</span>
-						<h1><a href="">Zoom’s 5.0 update helps stop zoombombing and improves encryption</h1></a>
+						<h2><a href="">Zoom’s 5.0 update helps stop zoombombing and improves encryption</a></h2>
 						<span class="article-meta">
 							<span>Napier Lopez</span>&nbsp;&nbsp;
 							<span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
@@ -261,10 +262,10 @@
 
 				</section>
 				<section class="gear">
-					<p class="category-name"><a href=""> Gear <i class="fas fa-chevron-right"></i></a></p>
+					<h2 class="category-name"><a href=""> Gear <i class="fas fa-chevron-right"></i></a></h2>
 					<article class="category-hero gear-hero">
 						<span class="article-category">MOST POPULAR</span>
-						<h1><a href="">Some OnePlus 8 Pro users are complaining about problems with their displays</h1></a>
+						<h2><a href="">Some OnePlus 8 Pro users are complaining about problems with their displays</a></h2>
 						<span class="article-meta">
 							<span>Elijah Ayandokun</span>&nbsp;&nbsp;
 							<span><i class="far fa-clock"></i>&nbsp;2 hours ago</span>
@@ -300,10 +301,10 @@
 
 				</section>
 				<section class="tech">
-					<p class="category-name"><a href=""> Tech <i class="fas fa-chevron-right"></i></a></p>
+					<h2 class="category-name"><a href=""> Tech <i class="fas fa-chevron-right"></i></a></h2>
 					<article class="category-hero tech-hero">
 						<span class="article-category">MOST POPULAR</span>
-						<h1><a href="">Researchers claim this AI model achieves better compression rates than PNGs</h1></a>
+						<h2><a href="">Researchers claim this AI model achieves better compression rates than PNGs</a></h2>
 						<span class="article-meta">
 							<span>Ivan Mehta</span>&nbsp;&nbsp;
 							<span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
@@ -338,10 +339,10 @@
 					<hr>
 				</section>
 				<section class="creative">
-					<p class="category-name"><a href=""> Creative <i class="fas fa-chevron-right"></i></a></p>
+					<h2 class="category-name"><a href=""> Creative <i class="fas fa-chevron-right"></i></a></h2>
 					<article class="category-hero creative-hero">
 						<span class="article-category">MOST POPULAR</span>
-						<h1><a href="">This AI wrote such emo lyrics that humans thought it was My Chemical Romance</h1></a>
+						<h2><a href="">This AI wrote such emo lyrics that humans thought it was My Chemical Romance</a></h2>
 						<span class="article-meta">
 							<span>Napier Lopez</span>&nbsp;&nbsp;
 							<span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
@@ -376,10 +377,10 @@
 					<hr>
 				</section>
 				<section class="podium">
-					<p class="category-name"><a href=""> Podium <i class="fas fa-chevron-right"></i></a></p>
+					<h2 class="category-name"><a href=""> Podium <i class="fas fa-chevron-right"></i></a></h2>
 					<article class="category-hero podium-hero">
 						<span class="article-category">MOST POPULAR</span>
-						<h1><a href="">Run an online store? In the age of COVID-19, you can’t skimp on web accessibility</h1></a>
+						<h2><a href="">Run an online store? In the age of COVID-19, you can’t skimp on web accessibility</a></h2>
 						<span class="article-meta">
 							<span>Napier Lopez</span>&nbsp;&nbsp;
 							<span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
@@ -414,10 +415,10 @@
 					<hr>
 				</section>
 				<section class="insights">
-					<p class="category-name"><a href=""> Insights <i class="fas fa-chevron-right"></i></a></p>
+					<h2 class="category-name"><a href=""> Insights <i class="fas fa-chevron-right"></i></a></h2>
 					<article class="category-hero insights-hero">
 						<span class="article-category">MOST POPULAR</span>
-						<h1><a href="">It's lonely being a female engineer — here’s how we fix it</h1></a>
+						<h2><a href="">It's lonely being a female engineer — here’s how we fix it</a></h2>
 						<span class="article-meta">
 							<span>Napier Lopez</span>&nbsp;&nbsp;
 							<span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
@@ -452,10 +453,10 @@
 					<hr>
 				</section>
 				<section class="launch">
-					<p class="category-name"><a href=""> Launch <i class="fas fa-chevron-right"></i></a></p>
+					<h2 class="category-name"><a href=""> Launch <i class="fas fa-chevron-right"></i></a></h2>
 					<article class="category-hero launch-hero">
 						<span class="article-category">MOST POPULAR</span>
-						<h1><a href="">Facebook-backed Reliance Jio pilots basic grocery ordering service on WhatsApp in India</h1></a>
+						<h2><a href="">Facebook-backed Reliance Jio pilots basic grocery ordering service on WhatsApp in India</a></h2>
 						<span class="article-meta">
 							<span>Napier Lopez</span>&nbsp;&nbsp;
 							<span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
@@ -490,10 +491,10 @@
 					<hr>
 				</section>
 				<section class="distract">
-					<p class="category-name"><a href=""> Distract <i class="fas fa-chevron-right"></i></a></p>
+					<h2 class="category-name"><a href=""> Distract <i class="fas fa-chevron-right"></i></a></h2>
 					<article class="category-hero distract-hero">
 						<span class="article-category">MOST POPULAR</span>
-						<h1><a href="">The true, cocaine-fueled story behind Back to the Future's time-traveling DeLorean</h1></a>
+						<h2><a href="">The true, cocaine-fueled story behind Back to the Future's time-traveling DeLorean</a></h2>
 						<span class="article-meta">
 							<span>Napier Lopez</span>&nbsp;&nbsp;
 							<span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
@@ -529,6 +530,7 @@
 				</section>
 			</aside>
 			<section class="deals">
+				<h2 style="display:none">Empty Heading</h2>
 				<div class="top">
 					<p class="category-name"><a href="#">Latest deals <i class="fas fa-chevron-right"></i></a></p>
 					<p class="see">See all Deals</p>
