Change some styling: - Change the font size of caret right - Increase line height of article h2

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 			<section class="latest-funding">
 				<h2 style="display:none">Empty Heading</h2>
 				<div class="flex">
-					<p class="category-name"><a href="#">Latest funding rounds on Index.co &nbsp;<i class="fas fa-chevron-right"></i></a></p>				
+					<p class="category-name"><a href="#">Latest funding rounds on Index.co <i class="fas fa-chevron-right"></i></a></p>				
 					<ul>
 						<li><a href="" class="first">See more</a></li>
 						<li><a href="">Get updates by email</a></li>
