Add margin to article meta and article category class

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<section class="hero-section">
 				<h2 style="display:none">Empty Heading</h2>
 				<article  class="main-article article1">
+					<span class="article-category">TECH</span>
 					<h2><a href="">Facebook invests $5.7B in Indian mobile carrier Reliance Jio to bring small businesses online</a></h2>
 					<span class="article-meta">
 						<span>by Ivan Mehta</span>&nbsp;&nbsp;
