--- a/index.html
+++ b/index.html
@@ -12,13 +12,38 @@
 
 	<body>
 		<nav class="nav-top">
-				<a href="#"><img src="./img/tnw.svg" alt="TNW logo"></a>
-				<div>
-						<ul>
-								<li><i class="fas fa-search"></i></li>
-								<li><i class="fas fa-bars"></i></li>
-						</ul>
-				</div>
+			<a href="#" class="logo"><img src="./img/tnw.svg" alt="TNW logo"></a>
+			<div class="first">
+				<ul>
+					<li><a href="#">News</a></li>
+					<li><a href="#">TNW2020</a></li>
+					<li><a href="#">Business</a></li>
+					<li><a href="#">AMAs</a></li>
+					<li><a href="#">Spaces</a></li>
+					<li><a href="#">Terms & Conditions</a></li>
+				</ul>
+				<ul>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Advertise</a></li>
+					<li><a href="#">Jobs</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</div>
+			<div class="second">
+				<ul>
+					<li><a href="#">LATEST</a></li>
+					<li><a href="#">HARD FORK</a></li>
+					<li><a href="#">PLUGGED</a></li>
+					<li><a href="#">FUNDAMENTALS</a></li>
+					<li><a href="#">README</a></li>
+					<li><a href="#">GROWTH QUARTERS</a></li>
+					<li><a href="#">NEURAL</a></li>
+				</ul>
+			</div>
+			<div class="icons">
+				<i class="fas fa-search"></i>
+				<i class="fas fa-bars"></i>
+			</div>
 		</nav>
 
 		<main>
