Modify navbar and apply grid and nested flex

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 
 	<body>
 		<nav class="nav-top">
-			<a href="#" class="logo"><img src="./img/tnw.svg" alt="TNW logo"></a>
-			<div class="first">
-				<ul>
+			<div class="tnw-logo">
+				<a href="#"><img src="./img/tnw.svg" alt="TNW logo"></a>
+			</div>
+			<div class="first-part">
+				<ul class="first-left">
 					<li><a href="#">News</a></li>
 					<li><a href="#">TNW2020</a></li>
 					<li><a href="#">Business</a></li>
@@ -22,15 +24,15 @@
 					<li><a href="#">Spaces</a></li>
 					<li><a href="#">Terms & Conditions</a></li>
 				</ul>
-				<ul>
+				<ul class="first-right">
 					<li><a href="#">About</a></li>
 					<li><a href="#">Advertise</a></li>
 					<li><a href="#">Jobs</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</div>
-			<div class="second">
-				<ul>
+			<div class="second-part">
+				<ul class="second-left">
 					<li><a href="#">LATEST</a></li>
 					<li><a href="#">HARD FORK</a></li>
 					<li><a href="#">PLUGGED</a></li>
@@ -39,10 +41,10 @@
 					<li><a href="#">GROWTH QUARTERS</a></li>
 					<li><a href="#">NEURAL</a></li>
 				</ul>
-			</div>
-			<div class="icons">
-				<i class="fas fa-search"></i>
-				<i class="fas fa-bars"></i>
+				<div class="second-right">
+					<i class="fas fa-search"></i>
+					<i class="fas fa-bars"></i>
+				</div>
 			</div>
 		</nav>
 
