Fix stylelint errors

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 		<main>
 			<section class="hero-section">
-				<h2 style="display:none">Empty Heading</h2>
+				<h2 style="display: none;">Empty Heading</h2>
 				<article  class="main-article article1">
 					<span class="article-category">TECH</span>
 					<h2><a href="">Facebook invests $5.7B in Indian mobile carrier Reliance Jio to bring small businesses online</a></h2>
@@ -165,7 +165,7 @@
 				</div>
 			</section>
 			<section class="latest-funding">
-				<h2 style="display:none">Empty Heading</h2>
+				<h2 style="display: none;">Empty Heading</h2>
 				<div class="flex">
 					<p class="category-name"><a href="#">Latest funding rounds on Index.co <i class="fas fa-chevron-right"></i></a></p>				
 					<ul>
@@ -558,7 +558,7 @@
 				</section>
 			</aside>
 			<section class="deals">
-				<h2 style="display:none">Empty Heading</h2>
+				<h2 style="display: none;">Empty Heading</h2>
 				<div class="top">
 					<p class="category-name"><a href="#">Latest deals <i class="fas fa-chevron-right"></i></a></p>
 					<p class="see">See all Deals</p>
