Make changes suggested by TSE

--- a/index.html
+++ b/index.html
@@ -58,19 +58,24 @@
       <section class="hero-section">
         <h2 style="display: none;">Empty Heading</h2>
         <article class="main-article article1">
-          <span class="article-category">TECH</span>
-          <h2>
-            <a href=""
-              >Facebook invests $5.7B in Indian mobile carrier Reliance Jio to
-              bring small businesses online</a
-            >
-          </h2>
-          <span class="article-meta">
-            <span>by Ivan Mehta</span>&nbsp;&nbsp;
-            <span><i class="far fa-clock"></i>&nbsp;1 hour ago</span
-            >&nbsp;&nbsp;
-            <span><i class="fas fa-share-alt"></i>&nbsp; 0</span>
-          </span>
+          <div class="big-logo">
+
+          </div>
+          <div>
+            <span class="article-category">TECH</span>
+            <h2>
+              <a href=""
+                >Facebook invests $5.7B in Indian mobile carrier Reliance Jio to
+                bring small businesses online</a
+              >
+            </h2>
+            <span class="article-meta">
+              <span>by Ivan Mehta</span>
+              <span><i class="far fa-clock"></i>1 hour ago</span
+              >
+              <span><i class="fas fa-share-alt"></i>0</span>
+            </span>            
+          </div>
         </article>
         <article class="main-article article2">
           <span class="article-category">APPS</span>
@@ -81,10 +86,10 @@
             >
           </h2>
           <span class="article-meta">
-            <span>by Ivan Mehta</span>&nbsp;&nbsp;
-            <span><i class="far fa-clock"></i>&nbsp;1 hour ago</span
-            >&nbsp;&nbsp;
-            <span><i class="fas fa-share-alt"></i>&nbsp; 0</span>
+            <span>by Ivan Mehta</span>
+            <span><i class="far fa-clock"></i>1 hour ago</span
+            >
+            <span><i class="fas fa-share-alt"></i>0</span>
           </span>
         </article>
         <article class="main-article article3">
@@ -95,10 +100,10 @@
             >
           </h2>
           <span class="article-meta">
-            <span>by Ivan Mehta</span>&nbsp;&nbsp;
-            <span><i class="far fa-clock"></i>&nbsp;1 hour ago</span
-            >&nbsp;&nbsp;
-            <span><i class="fas fa-share-alt"></i>&nbsp; 0</span>
+            <span>by Ivan Mehta</span>
+            <span><i class="far fa-clock"></i>1 hour ago</span
+            >
+            <span><i class="fas fa-share-alt"></i>0</span>
           </span>
         </article>
       </section>
@@ -343,8 +348,8 @@
               >
             </h2>
             <span class="article-meta">
-              <span>Napier Lopez</span>&nbsp;&nbsp;
-              <span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
+              <span>Napier Lopez</span>
+              <span><i class="far fa-clock"></i>12 hours ago</span>
             </span>
           </article>
           <article class="category-second">
@@ -420,8 +425,8 @@
               >
             </h2>
             <span class="article-meta">
-              <span>Elijah Ayandokun</span>&nbsp;&nbsp;
-              <span><i class="far fa-clock"></i>&nbsp;2 hours ago</span>
+              <span>Elijah Ayandokun</span>
+              <span><i class="far fa-clock"></i>2 hours ago</span>
             </span>
           </article>
           <article class="category-second">
@@ -497,8 +502,8 @@
               >
             </h2>
             <span class="article-meta">
-              <span>Ivan Mehta</span>&nbsp;&nbsp;
-              <span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
+              <span>Ivan Mehta</span>
+              <span><i class="far fa-clock"></i>12 hours ago</span>
             </span>
           </article>
           <article class="category-second">
@@ -574,8 +579,8 @@
               >
             </h2>
             <span class="article-meta">
-              <span>Napier Lopez</span>&nbsp;&nbsp;
-              <span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
+              <span>Napier Lopez</span>
+              <span><i class="far fa-clock"></i>12 hours ago</span>
             </span>
           </article>
           <article class="category-second">
@@ -651,8 +656,8 @@
               >
             </h2>
             <span class="article-meta">
-              <span>Napier Lopez</span>&nbsp;&nbsp;
-              <span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
+              <span>Napier Lopez</span>
+              <span><i class="far fa-clock"></i>12 hours ago</span>
             </span>
           </article>
           <article class="category-second">
@@ -727,8 +732,8 @@
               >
             </h2>
             <span class="article-meta">
-              <span>Napier Lopez</span>&nbsp;&nbsp;
-              <span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
+              <span>Napier Lopez</span>
+              <span><i class="far fa-clock"></i>12 hours ago</span>
             </span>
           </article>
           <article class="category-second">
@@ -804,8 +809,8 @@
               >
             </h2>
             <span class="article-meta">
-              <span>Napier Lopez</span>&nbsp;&nbsp;
-              <span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
+              <span>Napier Lopez</span>
+              <span><i class="far fa-clock"></i>12 hours ago</span>
             </span>
           </article>
           <article class="category-second">
@@ -881,8 +886,8 @@
               >
             </h2>
             <span class="article-meta">
-              <span>Napier Lopez</span>&nbsp;&nbsp;
-              <span><i class="far fa-clock"></i>&nbsp;12 hours ago</span>
+              <span>Napier Lopez</span>
+              <span><i class="far fa-clock"></i>12 hours ago</span>
             </span>
           </article>
           <article class="category-second">
